@@ -17,7 +17,8 @@ VERSION 2.9.90
   BUGFIXES:
    * Fix loading of some Flickr photos in the photos context view applet and show
      more relevant photos. (BR 317108)
-   * Fix playlist inline play control slider & draw icons with higher DPI.
+   * Fix playlist inline play control slider knob & draw playlist delegate icons with
+     higher DPI.
    * Fix searching for composer and album info for local files in Wikipedia applet.
 
 VERSION 2.9.82
